--- a/About/Changelog.txt
+++ b/About/Changelog.txt
@@ -1,5 +1,8 @@
 # Changelog for VarietyMattersImproved
 
+1.0.2.0 - Ascetic pawns should now not require more than low variety
+
+
 1.0.1.0 - French translation added, thanks qux!
 
 
